deployed database (testing)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-O1SR07P; Database=BirthdayApp; Trusted_Connection=True;"
+    "DefaultConnection": "Server=mysql-birthday.alwaysdata.net;Port=3306;Database=birthday_app;User Id=root;Password=8mKPNN2jQcVG&UjVdMvw&15UPQXz4XTZ"
   },
   "Logging": {
     "LogLevel": {
