--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mysql-birthday.alwaysdata.net;Port=3306;Database=birthday_app;User Id=root;Password=8mKPNN2jQcVG&UjVdMvw&15UPQXz4XTZ"
+    "DefaultConnection": "Server=mysql-birthday.alwaysdata.net;Port=3306;Database=birthdayapp;User Id=ArseoAzemaj;Password=8mKPNN2jQcVG&UjVdMvw&15UPQXz4XTZ"
   },
   "Logging": {
     "LogLevel": {
