--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mysql-birthday.alwaysdata.net;Port=3306; Database=birthdayapp; User=birthday; Password=8mKPNN2jQcVG&UjVdMvw&15UPQXz4XTZ; Trusted_Connection=True;"
+    "DefaultConnection": "Server=127.0.0.1; Port=3306; Database=birthdayapp; uid=root; pwd=8mKPNN2jQcVG&UjVdMvw&15UPQXz4XTZ; Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
