fixed connection for DB

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1; Port=3306; Database=birthdayapp; uid=root; pwd=8mKPNN2jQcVG&UjVdMvw&15UPQXz4XTZ; Trusted_Connection=True;"
+    "DefaultConnection": "Server=mysql-birthday.alwaysdata.net;Port=3306;Database=birthday_app;Uid=birthday;Pwd=Y2mfDvf34C6JV6$66967GdFT1s7J&8Hq;"
   },
   "Logging": {
     "LogLevel": {
